video-orc: fix unpack functions for RGB/RGB15 on BE

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=745337